# psmgmt

./: .cvsignore  .gitattributes  .gitignore  ChangeLog  Doxyfile  ERROR_GCC  LICENSE  LICENSE.QPL  Makefile  Makefile.am  Makefile.in  Makefile.include  Makefile.orig  Makefile.version  NEWS  README  VERSION  VERSIONS  aclocal.m4  blub  common.am  configure  configure.ac  configure.in  install  kernellist_alpha  kernellist_i386  make_2.2.14  make_2.2.14.SuSE  make_2.2.14.alice  make_2.2.16  make_2.2.16.SuSE  make_2.2.16.alice  make_2.2.18  make_2.2.18.SuSE  make_2.2.5  make_2.4.1  make_2.4.2-SMP.SuSE  make_axp  make_axp_2.2.14.SuSE  (+11 more)
config/: Makefile.am  Makefile.in  psmgmt-base.dump  psmgmt-defaults.dump
doc/: 99-psid.conf  Environments  INSTALL  ImplementationGuidlines  MCP_Design_Ueberlegungen  Makefile.am  Makefile.in  MessageTypes  README.ASAN  README.IWYU  README.cgroup  README.nodeinfo  README.psgw  README.pspam  ToDo  cgroup.conf  cgroup.conf.in  install_  parastation.conf  parastation.conf.template  parastation.conf.tmpl  parastation.conf_tru64  psaccount.conf  psm.config.template  psresport.conf  psroute.txt  snmp_agents.txt
doc/pam/: psid
doc/psconfig/: nodeinfo.dump  nodeinfo.vipsconfig  objects.uxf  psmgmt-defaults.dump  psmgmt.vipsconfig  update_defaults_5.1.51.sh  update_defaults_6.0.sh
doc/psview/: gui_prj.txt  psview.txt
doc/systemd/: psid_service_d_munge.conf  psid_service_d_nvidia.conf  psidstarter_socket_d_port.conf
include/: Makefile.am  Makefile.in  arg.h  cardconfig.h  compat_tru64.h  config_parsing.h  dump.c  env.h  errlog.h  fifo.h  hardware.h  info.h  jm.h  jmio.h  kconfig.h  kvs.h  kvscommon.h  kvslog.h  kvsprovider.h  lanai9_def.h  lanai_def.h  license.h  license_pub.h  linenoise.h  list.h  list_t.h  logger.h  logging.h  mcast.h  mcp_dispatch.h  mcp_dma_benchif.h  mcp_types.h  mcpif.h  mcpstructs.h  mcpstructs_stabs.h  parser.h  plugin.h  plugincomm.h  pluginconfig.h  plugincpufreq.h  (+78 more)
lib/plugincommon/: Makefile.am  Makefile.in  plugincomm.c  pluginconfig.c  plugincpufreq.c  pluginenv.c  pluginforwarder.c  pluginfrag.c  plugingpufreq.c  pluginhelper.c  pluginhostlist.c  pluginjson.c  pluginlog.c  pluginlog.h  pluginmalloc.c  pluginpartition.c  pluginpsconfig.c  pluginpty.c  pluginscript.c  pluginspawn.c  pluginstrv.c  pluginvector.c  psserial.c
lib/pscommon/: Makefile.am  Makefile.in  logging.c  pscio.c  pscommon.c  pscomplist.c  pscpu.c  psenv.c  pshostlist.c  pshwtypes.c  psitems.c  psparamspace.c  pspartition.c  psprotocol.c  psreservation.c  psserial.c  pssignal.c  psstrbuf.c  psstrv.c  pstask.c
lib/pse/: Makefile.am  Makefile.in  pse.c
lib/psi/: Makefile.am  Makefile.in  info.c  logger.c  psi.c  psicomm.c  psienv.c  psiinfo.c  psilog.c  psipartition.c  psispawn.c  psitask.c  psp.c
lib/pskvs/: Makefile.am  Makefile.in  kvs.c  kvscommon.c  kvslog.c  kvslog.h  kvsprovider.c
lib/putil/: Makefile.am  Makefile.in  config_parsing.c  env.c  hardware.c  kvs.c  kvscomm.c  kvscommon.c  linenoise.c  mcast.c  mcast_private.h  old_config_parsing.c  parser.c  psattribute.c  psconfighelper.c  psdaemonprotocol.c  pslic.c  psnodes.c  psparamspace.c  psstrings.c  rdp.c  rdp_private.h  selector.c  timer.c  timer_private.h
plugins/: Makefile.am  Makefile.in  Makefile.sharedlib.in  Makefile.staticlib.in
plugins/cgroup/: Makefile.am  Makefile.in  cgroup.c  cgroupconfig.c  cgroupconfig.h  cgrouplog.c  cgrouplog.h
plugins/dynIP/: Makefile.am  Makefile.in  dynIP.c  dynIPlog.c  dynIPlog.h
plugins/jail/: Makefile.am  Makefile.in  jail-config.inc  jail-cpuacct.inc  jail-cpuset.inc  jail-devices.inc  jail-functions.inc  jail-main.sh  jail-memory.inc  jail-oom.inc  jail-term-cpuacct.inc  jail-term-cpuset.inc  jail-term-devices.inc  jail-term-memory.inc  jail-term.sh  jail.c  jail.conf  jail.conf.in  jail.sh  jailconfig.c  jailconfig.h  jailhandles.h  jaillog.c  jaillog.h  jailtypes.h
plugins/nodeinfo/: Makefile.am  Makefile.in  nodeinfo.c  nodeinfo.h  nodeinfoconfig.c  nodeinfoconfig.h  nodeinfohandles.h  nodeinfointer.c  nodeinfointer.h  nodeinfolog.c  nodeinfolog.h  nodeinfotypes.h
plugins/pelogue/: Makefile.am  Makefile.in  pelogue.c  pelogue.h  peloguechild.c  peloguechild.h  peloguecomm.c  peloguecomm.h  pelogueconfig.c  pelogueconfig.h  pelogueforwarder.c  pelogueforwarder.h  peloguehandles.h  pelogueinter.c  pelogueinter.h  peloguejob.c  peloguejob.h  peloguekvs.c  peloguekvs.h  peloguelog.c  peloguelog.h  peloguescript.c  peloguescript.h  peloguescript2.c  peloguetypes.h  psaccfunc.h
plugins/psaccount/: Makefile.am  Makefile.in  helper.c  helper.h  psaccount.c  psaccount.h  psaccountclient.c  psaccountclient.h  psaccountcollect.c  psaccountcollect.h  psaccountcomm.c  psaccountcomm.h  psaccountconfig.c  psaccountconfig.h  psaccountenergy.c  psaccountenergy.h  psaccountfilesystem.c  psaccountfilesystem.h  psaccounthandles.h  psaccounthistory.c  psaccounthistory.h  psaccountinter.c  psaccountinter.h  psaccountinterconnect.c  psaccountinterconnect.h  psaccountjob.c  psaccountjob.h  psaccountkvs.c  psaccountkvs.h  psaccountlog.c  psaccountlog.h  psaccountproc.c  psaccountproc.h  psaccountscript.c  psaccountscript.h  psaccounttypes.h
plugins/psexec/: Makefile.am  Makefile.in  psexec.c  psexec.h  psexeccomm.c  psexeccomm.h  psexechandles.h  psexecinter.c  psexecinter.h  psexeclog.c  psexeclog.h  psexecscripts.c  psexecscripts.h  psexectypes.h
plugins/psgw/: Makefile.am  Makefile.in  psgw.c  psgwcomm.c  psgwcomm.h  psgwconfig.c  psgwconfig.h  psgwkvs.c  psgwlog.c  psgwlog.h  psgwpart.c  psgwpart.h  psgwrequest.c  psgwrequest.h  psgwres.c  psgwres.h
plugins/psmom/: ChangeLog-History  Makefile.am  Makefile.in  README  psmom-ChangeLog-History  psmom-README
plugins/psmunge/: Makefile.am  Makefile.in  psmunge.c  psmunge.h  psmungehandles.h  psmungeinter.c  psmungeinter.h  psmungelog.c  psmungelog.h  psmungetypes.h
plugins/pspam/: Makefile.am  Makefile.in
plugins/pspmi/: Makefile.am  Makefile.in  pmiclient.c  pmiclient.h  pmiclientspawn.c  pmiclientspawn.h  pmiforwarder.c  pmiforwarder.h  pmikvs.c  pmikvs.h  pmilog.c  pmilog.h  pmimain.c  (+9 more)
(+1762 files in other folders)
