##################################################### -*- shell-script -*- ##
#                  ParaStation3
#        Copyright (c) 2002 ParTec AG Karlsruhe
#        All rights reserved.
#############################################################################
#
# $Id: configure.in,v 1.19 2002/10/01 12:42:50 hauke Exp $
#
# @author
#         Jens Hauke <hauke@par-tec.de>
#############################################################################

# Process this file with autoconf to produce a configure script.
AC_INIT(["psmlib"],[""],["hauke@par-tec.com"])
AC_CONFIG_SRCDIR([configure.in])

AC_CONFIG_AUX_DIR(["scripts"]) 
AC_CANONICAL_TARGET([]) 
AC_PROG_RANLIB 

path_cleanup()
{
	case $1 in
	[[\\/]]* | ?:[[\\/]]* ) # Absolute path.
      		echo $1 ;;
	*) # Relative path.
		echo `pwd`/$1 ;;
	esac
}

AC_SUBST(MCPBINHEADERDIR)
AC_SUBST(MYRI_HOME)
AC_ARG_WITH([mcpbinheader], [  --with-mcpbinheader=dir location of mcp bin headers] ,
[
	MCPBINHEADERDIR=`path_cleanup ${withval}`;
	# ToDo: Check for: $MCPBINHEADERDIR/psm_mcp9x_bench.h
]
,
[
	MCPBINHEADERDIR=
	echo -n "checking for LANai-tools..."
	AC_ARG_WITH([lanaitools], [  --with-lanaitools=dir   location of lanai tools] ,
	[
		MYRI_HOME=`path_cleanup ${withval}`;
		echo " $MYRI_HOME"
	],[
		AC_PATH_PROG(lanaigccpath,lanai-gcc)
		if test -z "$lanaigccpath" ; then
			MCPBINHEADERDIRauto=yes
		else
			MYRI_HOME=`dirname $lanaigccpath`/..
			MYRI_HOME=`path_cleanup $MYRI_HOME`
#			echo " $MYRI_HOME"
		fi
	])
])
	

AC_SUBST([KERNELLIST])
AC_ARG_WITH([kernellist], [  --with-kernellist=file    file with kernelnames and kerneldirs] ,
[
	KERNELLIST=`path_cleanup $withval`
],[
	KERNELLIST=`path_cleanup kernellist`
])
AC_SUBST([JAVA_ENABLED])
# default is no
AC_ARG_ENABLE([java], [  --enable-java    (default: disabled)] ,
[
	JAVA_ENABLED=$enableval
],[
	JAVA_ENABLED="no"
])

AC_SUBST([PSMON_ENABLED])
# default is no
AC_ARG_ENABLE([psmon], [  --enable-psmon    (default: disabled)] ,
[
	PSMON_ENABLED=$enableval
],[
	PSMON_ENABLED="no"
])



AC_SUBST([PSM_OSDIR])
AC_SUBST([CFLAG_WALL])
AC_SUBST([CFLAG_G])
AC_SUBST([CFLAG_COMPAT])
AC_SUBST([CPPFLAG_MMD])
AC_SUBST([DEPEXTENSION])
AC_SUBST([TRU64FILEADD])
AC_SUBST([LIBCURSES])
AC_SUBST([TOP_SRCDIR])

TOP_SRCDIR=`cd \`dirname $0\`;pwd`


case $target_os in
linux)
	PSM_OSDIR=kern/Linux
	AC_CONFIG_FILES([kern/Linux/Makefile])
	AC_CONFIG_FILES([kern/Linux/Makefile.second])
	
	if test "$MCPBINHEADERDIRauto" = "yes"; then
		MCPBINHEADERDIR=`path_cleanup $srcdir`/kern/mcp/build
	fi;
	CFLAG_WALL="-W -Wall -Wno-unused"
	CFLAG_G=-g
	CPPFLAG_MMD=-MMD
	DEPEXTENSION=.d
	TRU64FILEADD=
	LIBCURSES=ncurses
	;;
osf5.1)
	PSM_OSDIR=kern/OSF1
	AC_CONFIG_FILES([kern/OSF1/Makefile])
	if test "$MCPBINHEADERDIRauto" = "yes"; then
		MCPBINHEADERDIR=`path_cleanup $srcdir`/kern/mcp/build_nozc
	fi;
	CFLAG_WALL="-w0  -msg_disable incomparry,unreachcode"
	CFLAG_G=-g3
	CFLAG_COMPAT="-FIcompat_tru64.h"
	CPPFLAG_MMD=-MD
	DEPEXTENSION=.o.d
	TRU64FILEADD=_tru64
	LIBCURSES=curses
#	AC_CONFIG_FILES([kern/OSF1/Makefile])
	;;
*)
	echo "Unkown os ($target_os)"
	exit 1
	;;
esac


if test "$MCPBINHEADERDIRauto" = "yes"; then
	cat <<DOK

WARNING!
Cant find the LANai-tools (use --with-lanaitools= ?)!
Now using precompiled MCPs ( like --with-mcpbinheader=$MCPBINHEADERDIR )

DOK

fi


AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([lib/Makefile])
AC_CONFIG_FILES([lib/Makefile.sharedlib])
AC_CONFIG_FILES([lib/Makefile.staticlib])
AC_CONFIG_FILES([lib/pshal/Makefile])
AC_CONFIG_FILES([lib/psport/Makefile])
AC_CONFIG_FILES([lib/psport4/Makefile])
AC_CONFIG_FILES([lib/arg/Makefile])
AC_CONFIG_FILES([lib/pvar/Makefile])
AC_CONFIG_FILES([lib/pse/Makefile])
AC_CONFIG_FILES([lib/psi/Makefile])
AC_CONFIG_FILES([lib/pscommon/Makefile])
AC_CONFIG_FILES([lib/putil/Makefile])
AC_CONFIG_FILES([kern/mcp/Makefile])
AC_CONFIG_FILES([kern/Makefile.include])
AC_CONFIG_FILES([bin/Makefile])
AC_CONFIG_FILES([bin/test/Makefile])
AC_CONFIG_FILES([bin/mapper/Makefile])
AC_CONFIG_FILES([bin/mon/Makefile])
AC_CONFIG_FILES([bin/java/psview/Makefile])
AC_CONFIG_FILES([dist/Makefile])
AC_CONFIG_FILES([dist/Doxyfile])
AC_CONFIG_FILES([dist_fe/Makefile])



AC_OUTPUT


#
# Local Variables:
#  compile-command: "autoconf"
# End:
#
#
