##################################################### -*- shell-script -*- ##
#                  ParaStation
#        Copyright (c) ParTec AG Karlsruhe
#        All rights reserved.
#############################################################################
#
# $Id: configure.in,v 1.29 2003/07/18 14:09:12 eicker Exp $
#
# @author
#         Jens Hauke <hauke@par-tec.de>
#         Norbert Eicker <eicker@par-tec.de>
#############################################################################

# Process this file with autoconf to produce a configure script.
AC_INIT(["psmgmt"],[""],["eicker@par-tec.com"])
AC_CONFIG_SRCDIR([configure.in])

AC_CONFIG_AUX_DIR(["scripts"]) 
AC_CANONICAL_TARGET([]) 
AC_PROG_RANLIB 

path_cleanup()
{
	case $1 in
	[[\\/]]* | ?:[[\\/]]* ) # Absolute path.
      		echo $1 ;;
	*) # Relative path.
		echo `pwd`/$1 ;;
	esac
}

AC_SUBST([TTCP_ENABLED])
# default is no
AC_ARG_ENABLE([ttcp], [  --enable-ttcp    (Transparent tcp (default: disabled)] ,
[
	TTCP_ENABLED=$enableval
],[
	TTCP_ENABLED="no"
])


AC_SUBST([CFLAG_WALL])
AC_SUBST([CFLAG_G])
AC_SUBST([CFLAG_COMPAT])
AC_SUBST([CPPFLAG_MMD])
AC_SUBST([DEPEXTENSION])
AC_SUBST([TRU64FILEADD])
AC_SUBST([LIBCURSES])
AC_SUBST([TOP_SRCDIR])

TOP_SRCDIR=`cd \`dirname $0\`;pwd`


case $target_os in
linux)
	CFLAG_WALL="-W -Wall -Wno-unused"
	CFLAG_G=-g
	CPPFLAG_MMD=-MMD
	DEPEXTENSION=.d
	TRU64FILEADD=
	LIBCURSES=ncurses
	;;
osf5.1)
	CFLAG_WALL="-w0  -msg_disable incomparry,unreachcode"
	CFLAG_G=-g3
	CFLAG_COMPAT="-FIcompat_tru64.h"
	CPPFLAG_MMD=-MD
	DEPEXTENSION=.o.d
	TRU64FILEADD=_tru64
	LIBCURSES=curses
	;;
*)
	echo "Unkown os ($target_os)"
	exit 1
	;;
esac

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([lib/Makefile])
AC_CONFIG_FILES([lib/Makefile.sharedlib])
AC_CONFIG_FILES([lib/Makefile.staticlib])
AC_CONFIG_FILES([lib/psport4/Makefile])
AC_CONFIG_FILES([lib/psport4shm/Makefile])
AC_CONFIG_FILES([lib/pse/Makefile])
AC_CONFIG_FILES([lib/psi/Makefile])
AC_CONFIG_FILES([lib/pscommon/Makefile])
AC_CONFIG_FILES([lib/pslog/Makefile])
AC_CONFIG_FILES([lib/putil/Makefile])
AC_CONFIG_FILES([bin/Makefile])
AC_CONFIG_FILES([docu/Makefile])
AC_CONFIG_FILES([docu/Doxyfile])
AC_CONFIG_FILES([dist_fe/Makefile])
AC_CONFIG_FILES([dist_docu/Makefile])
AC_CONFIG_FILES([dist_mgmt/Makefile])


AC_OUTPUT


#
# Local Variables:
#  compile-command: "autoconf"
# End:
#
#
