##################################################### -*- shell-script -*- ##
#                  ParaStation
#        Copyright (c) ParTec AG Karlsruhe
#        All rights reserved.
#############################################################################
#
# $Id: configure.in,v 1.31 2004/03/09 18:02:36 eicker Exp $
#
# @author
#         Jens Hauke <hauke@par-tec.de>
#         Norbert Eicker <eicker@par-tec.de>
#############################################################################

# Process this file with autoconf to produce a configure script.
AC_INIT(["psmgmt"],[""],["eicker@par-tec.com"])
AC_CONFIG_SRCDIR([configure.in])

AC_CONFIG_AUX_DIR(["scripts"]) 
AC_CANONICAL_TARGET([]) 
AC_PROG_RANLIB 

path_cleanup()
{
	case $1 in
	[[\\/]]* | ?:[[\\/]]* ) # Absolute path.
      		echo $1 ;;
	*) # Relative path.
		echo `pwd`/$1 ;;
	esac
}

AC_SUBST([CFLAG_WALL])
AC_SUBST([CFLAG_G])
AC_SUBST([CFLAG_COMPAT])
AC_SUBST([CPPFLAG_MMD])
AC_SUBST([DEPEXTENSION])
AC_SUBST([TRU64FILEADD])
AC_SUBST([LIBCURSES])
AC_SUBST([TOP_SRCDIR])

TOP_SRCDIR=`cd \`dirname $0\`;pwd`

AC_SUBST([PSCOM_DIR])
AC_ARG_WITH([pscom], [  --with-pscom=dir        home of pscom (includes)] ,
[
        PSCOM_DIR=`path_cleanup $withval`
],[
        PSCOM_DIR="/opt/parastation"
])

AC_SUBST([DOXYGEN_ENABLED])
# default is yes, if PSCOM_DIR is valid
AC_ARG_ENABLE([doxygen], [  --enable-doxygen        (default: auto)] ,
[
        DOXYGEN_ENABLED=$enableval
],[
        echo -n "checking for pscom ($PSCOM_DIR)... "
        if test -f "$PSCOM_DIR/include/psport4.h" ; then
                DOXYGEN_ENABLED="yes"
                echo "found"
        else
                DOXYGEN_ENABLED="no"
                echo
                echo "###############################################################"
                echo "WARNING: documentation for PSPort is disabled (missing includes)."
                echo "try --with-pscom=../p4 ?"
                echo "###############################################################"
        fi
])

case $target_os in
linux)
	CFLAG_WALL="-W -Wall -Wno-unused"
	CFLAG_G=-g
	CPPFLAG_MMD=-MMD
	DEPEXTENSION=.d
	TRU64FILEADD=
	LIBCURSES=ncurses
	;;
osf5.1)
	CFLAG_WALL="-w0  -msg_disable incomparry,unreachcode"
	CFLAG_G=-g3
	CFLAG_COMPAT="-FIcompat_tru64.h"
	CPPFLAG_MMD=-MD
	DEPEXTENSION=.o.d
	TRU64FILEADD=_tru64
	LIBCURSES=curses
	;;
*)
	echo "Unkown os ($target_os)"
	exit 1
	;;
esac

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([lib/Makefile])
AC_CONFIG_FILES([lib/Makefile.sharedlib])
AC_CONFIG_FILES([lib/Makefile.staticlib])
AC_CONFIG_FILES([lib/pse/Makefile])
AC_CONFIG_FILES([lib/psi/Makefile])
AC_CONFIG_FILES([lib/pscommon/Makefile])
AC_CONFIG_FILES([lib/pslog/Makefile])
AC_CONFIG_FILES([lib/putil/Makefile])
AC_CONFIG_FILES([bin/Makefile])
AC_CONFIG_FILES([docu/Makefile])
AC_CONFIG_FILES([docu/Doxyfile])
AC_CONFIG_FILES([dist_docu/Makefile])
AC_CONFIG_FILES([dist_mgmt/Makefile])


AC_OUTPUT


#
# Local Variables:
#  compile-command: "autoconf"
# End:
#
