#
# ParaStation
#
# Copyright (C) 2012-2015 ParTec Cluster Competence Center GmbH, Munich
#
# This file may be distributed under the terms of the Q Public License
# as defined in the file LICENSE.QPL included in the packaging of this
# file.
#
# Author:	Thomas Moschny <moschny@par-tec.com>
#

include $(top_srcdir)/common.am

include_HEADERS = pse.h psprotocol.h psnodes.h pstask.h pspartition.h	\
	pscommon.h psiinfo.h psispawn.h psienv.h psi.h logging.h	\
	pscpu.h list_t.h config_parsing.h list.h plugin.h		\
	psdaemonprotocol.h selector.h timer.h psicomm.h psicomm_proto.h \
	pssignal.h psreservation.h pstaskid.h

noinst_HEADERS = env.h hardware.h kvscommon.h kvs.h mcast.h parser.h	\
	 psbyteorder.h psilog.h pslog.h pspartition.h psstrings.h	\
	 rdp.h psipartition.h psparamspace.h kvsprovider.h		\
	 pluginmalloc.h pluginfrag.h plugincomm.h pluginconfig.h	\
	 pluginforwarder.h pluginhelper.h pluginhostlist.h pluginlog.h 	\
	 pluginpartition.h pluginpty.h pluginenv.h psprotocolenv.h      \
	 pluginstrv.h
