#
# ParaStation
#
# Copyright (C) 2012-2018 ParTec Cluster Competence Center GmbH, Munich
#
# This file may be distributed under the terms of the Q Public License
# as defined in the file LICENSE.QPL included in the packaging of this
# file.
#
include $(top_srcdir)/common.am

include_HEADERS = pse.h psprotocol.h psnodes.h pstask.h pspartition.h	\
	pscommon.h psiinfo.h psispawn.h psienv.h psi.h logging.h	\
	pscpu.h list_t.h config_parsing.h list.h plugin.h		\
	psdaemonprotocol.h selector.h timer.h psicomm.h			\
	psicomm_proto.h pssignal.h psreservation.h pstaskid.h		\
	psenv.h pshostlist.h

noinst_HEADERS = env.h hardware.h kvscommon.h kvs.h mcast.h parser.h	\
	psbyteorder.h psilog.h pslog.h pspartition.h psstrings.h	\
	rdp.h psipartition.h psparamspace.h kvslog.h pluginmalloc.h	\
	psserial.h pluginlog.h psprotocolenv.h pluginconfig.h		\
	pluginhelper.h pluginstrv.h pluginpty.h pluginpartition.h	\
	pluginforwarder.h linenoise.h pspluginprotocol.h pssenddb_t.h	\
	psitems.h
