#
# ParaStation
#
# Copyright (C) 2012-2021 ParTec Cluster Competence Center GmbH, Munich
# Copyright (C) 2022-2023 ParTec AG, Munich
#
# This file may be distributed under the terms of the Q Public License
# as defined in the file LICENSE.QPL included in the packaging of this
# file.
#
include $(top_srcdir)/common.am

include_HEADERS = pse.h psprotocol.h psnodes.h pstask.h pspartition.h	\
	pscommon.h psiinfo.h psispawn.h psienv.h psi.h logging.h	\
	pscpu.h list_t.h config_parsing.h list.h plugin.h		\
	psdaemonprotocol.h selector.h timer.h pssignal.h		\
	psreservation.h pstaskid.h psenv.h pscomplist.h

noinst_HEADERS = kvscommon.h kvs.h mcast.h parser.h psilog.h pslog.h	\
	pspartition.h rdp.h psipartition.h psparamspace.h		\
	psprotocolenv.h psserial.h kvslog.h linenoise.h			\
	pluginconfig.h pluginforwarder.h pluginhelper.h pluginlog.h	\
	pluginmalloc.h pluginpartition.h pluginpsconfig.h pluginpty.h	\
	pluginspawn.h pluginstrv.h pluginvector.h pspluginprotocol.h	\
	pssenddb_t.h psattribute.h psbyteorder.h pscio.h		\
	psconfighelper.h psitems.h
